# sample-client-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: run_docker.py
src/: config.py  constants.py  env_config.py  inkbox_tunnel_bootstrap.py  inkbox_tunnels_api.py  media_stream.py  ngrok_bootstrap.py  phone_agent.py  realtime_phone_agent.py  server.py
src/data_models/: tunnel.py
src/handlers/: dispatch.py  email.py  phone.py
src/inkbox_webhook/: config.py  media_stream.py  processor.py  server.py
src/inkbox_webhook/handlers/: dispatch.py  email.py  phone.py
