# pyproject.toml

[project]
name = "sample-client-server"
version = "0.1.0"
description = "Sample Inkbox webhook receiver + phone media WebSocket server (single FastAPI process)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12",
  # SDK provides the tunnel runtime (bootstrap, h2 control, passthrough
  # TLS termination, h2-transcode forwarding) and the org-level resources
  # (mailboxes, phone numbers, etc.) we used to call directly via httpx.
  "inkbox==0.3.1",
  "openai>=1.99.0",
  "pydantic>=2.11.4",
  "python-dotenv>=1.1.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.3",
]

[project.scripts]
inkbox-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = { "src" = "" }

